# nix-first

01-nix-build-mkDerivation/: README.md
01-nix-tutorial/: README.md
02-nix-shell/: shell.nix
03-nix_develope-flake-jupyter/: README.md
03-with-nix-flakes-jupyter/: README.md
04-build-cmake-package/: README.md
05-podman-emby/: README.md
06-nix-gl-host/: README.md  shell.nix
07-nix-lang/: 00_expr.nix  01_expr.nix  02_pkgs_lib.nix  04_fetch.nix  05-list.nix  06-fun-multi-arg.nix  07-fun-arg-set.nix  08-fun-arg-set-default-variadic.nix  11_shell.nix  12_nixos_conf.nix  13_package.nix  20-trace.nix  21-typeOf.nix  22-condition.nix  23-bool-lazy.nix  24-recursive.nix  30-dict-argument.nix  41-module1.nix  42-module2.nix  50-merge.nix  60-import-fun.nix  70-override.nix  README.md
08-direnv-use-nix/: shell.nix
08-nix-for-startup/: README.md
10-flake/: README.md  flake.nix  result
11-overlay/: README.md  overlay.nix  shell.nix
12-callPackage/: README.md
13-nix-replace-pyenv/: README.md  flake.nix
15-scala-dev/: README.md  flake.nix
16-rust-dev/: Cargo.toml  README.md  flake.nix  result
17-python-dev/: README.md  myapp.py  shell.nix
18-python-dev2-torch/: README.md  shell.nix
19-python-dev-torchWithCuda/: README.md  shell.nix
20-python-replace-pyenv/: README.md
21-python-venc/: README.md  default.nix
22-cpp-part2/: flake.nix  result
22-torch-cuda/: flake.nix  torchtext.nix
23-torchtext-build/: flake.nix  torchtext.nix
24-mkPoetryApplication-Harlequin/: flake.nix  harlequin.nix
25-poetry2nix/: flake.nix  pyproject.toml
(+59 files in other folders)
